<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_padding"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_angka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukan_angka"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen_padding"
        android:layout_marginBottom="@dimen/dimen_padding"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_sin"
        android:layout_width="126dp"
        android:layout_height="70dp"
        android:text="@string/sin"
        android:layout_below="@id/et_angka"/>
    <Button
        android:id="@+id/btn_cos"
        android:layout_width="126dp"
        android:layout_height="70dp"
        android:text="@string/cos"
        android:layout_below="@id/et_angka"
        android:layout_toEndOf="@id/btn_sin"/>
    <Button
        android:id="@+id/btn_tan"
        android:layout_width="126dp"
        android:layout_height="70dp"
        android:text="@string/tan"
        android:layout_below="@id/et_angka"
        android:layout_toEndOf="@id/btn_cos"/>
    <Button
        android:id="@+id/btn_csc"
        android:layout_width="126dp"
        android:layout_height="70dp"
        android:text="@string/csc"
        android:layout_below="@id/btn_sin"/>
    <Button
        android:id="@+id/btn_sec"
        android:layout_width="126dp"
        android:layout_height="70dp"
        android:text="@string/sec"
        android:layout_below="@id/btn_sin"
        android:layout_toEndOf="@id/btn_csc"/>
    <Button
        android:id="@+id/btn_cot"
        android:layout_width="126dp"
        android:layout_height="70dp"
        android:text="@string/cot"
        android:layout_below="@id/btn_sin"
        android:layout_toEndOf="@id/btn_sec"/>
    <Button
        android:id="@+id/btn_log"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/logaritma"
        android:layout_below="@id/btn_csc"/>

    <TextView
        android:id="@+id/tv_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_padding"
        android:layout_marginBottom="@dimen/dimen_padding"
        android:text="@string/_0_0"
        android:textSize="30sp"
        android:layout_below="@id/btn_log"
        android:textAlignment="center"/>

</RelativeLayout>